[project]
name = "minidungeon-pcg"
version = "0.1.0"
description = ""
authors = [
    {name = "Joachim Hviid",email = "johvi22@student.sdu.dk"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
license = "MIT"

[tool.poetry]
packages = [{include = "minidungeon_pcg", from = "src"}]

[tool.poetry.scripts]
start = "minidungeon_pcg.main:main"
generate-stage = "minidungeon_pcg.test_generator:main"
format = "tools.run_black:run"

[tool.poetry.dependencies]
tqdm = "^4.67.1"
gymnasium = "^1.2.2"
matplotlib = "^3.10.7"
gym-md = {path = "patches/gym_md-0.5.2-py3-none-any.whl"}
pygame = "^2.6.1"
stable-baselines3 = "^2.7.1"
torch = "^2.9.1"
rich = "^14.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)"
]
